syntax = "proto3";
option java_multiple_files = true;
package edu.cooper.ece465;

service Coordinator {
  rpc discoverWorker(DiscoverRequest) returns (DiscoverResult) {}
    
  rpc requestCompute(ControlMessage) returns (DataMessage) {}

  rpc sendResult(ResultMessage) returns (ControlMessage) {}
}

message DiscoverRequest{}

message DiscoverResult{
  int32 workerId = 1;
}

message DataMessage {
  bytes A = 1;
  bytes B = 2;
  int32 index = 3; // 1~8
  bool isWorkAvailable = 4;
}

message ResultMessage {
  bytes C  = 1;
  int32 index = 2; // 1~8
  ResultMessageType type = 3;
  int32 workerId = 4;
}

enum ResultMessageType {
  FAILED = 0;
  SUCCEED = 1;
}

message ControlMessage {
  ControlMessageType type = 1;
  int32 workerId = 2;
}

enum ControlMessageType {
  AVAILABLE = 0;
}